Mon May 18 13:38:00 UTC 2009  Simon Massey  <sma at prismtech dot com>

        * bin/tao_orb_tests.lst:
        * tao/RequestInterceptor_Adapter.h:
        * tao/RequestInterceptor_Adapter.cpp:
        * tao/tao.mpc:
        * tao/Invocation_Base.h:
        * tao/Invocation_Base.cpp:
        * tao/ClientRequestInterceptor_Adapter.h:
        * tao/PI_Server/ServerInterceptorAdapter.h:
        * tao/PI/RequestInterceptor_Adapter_Impl.cpp:
        * tao/PI/RequestInterceptor_Adapter_Impl.h:
        * tao/PI/ClientRequestInterceptor_Adapter_Impl.h:
        * tao/PI/PICurrent_Impl.h:
        * tao/PI/PICurrent.cpp:
        * tao/PI/PICurrent_Impl.cpp:
        * tao/PI/PICurrent_Impl.inl:
        * tao/ServerRequestInterceptor_Adapter.h:

          Bugzilla 3674 Fix.

Mon May 18 10:39:46 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Bug_3676_Regression/Hello.mpc:

          Renamed MPC file to Bug_3676_Regression.mpc.

Mon May 18 09:15:00 UTC 2009  Simon Massey  <sma at prismtech dot com>

        * tests/Bug_3674_Regression/test.cpp:

          TAO_Local_RefCounted_Object is deprecated. Changed
          it to CORBA::LocalObject.

Mon May 18 08:09:16 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tao/Transport.h:
        * tao/LocateRequest_Invocation.cpp:
        * tao/Transport.inl:

          Fixed bug#3676. Now after sending LocateRequest message
          transport will remain in a state when no first request is
          send. This is necessary for codeset negotiation which
          happens in the first normal request.

        * tests/Bug_3676_Regression/client.cpp:
        * tests/Bug_3676_Regression/Hello.mpc:
        * tests/Bug_3676_Regression/Hello.cpp:
        * tests/Bug_3676_Regression/Test.idl:
        * tests/Bug_3676_Regression/server.cpp:
        * tests/Bug_3676_Regression/Hello.h:
        * tests/Bug_3676_Regression/README:
        * tests/Bug_3676_Regression/run_test.pl:
        * bin/tao_orb_tests.lst:
