@@ -1,3 +1,9 @@
+Mon May 18 14:05:00 UTC 2009  Simon Massey  <sma at prismtech dot com>
+
+        * tao/Makefile.am:
+
+        Added new files from below.
+
 Mon May 18 13:38:00 UTC 2009  Simon Massey  <sma at prismtech dot com>
 
         * bin/tao_orb_tests.lst:
